--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "faunadb": "^4.5.4",
+    "faunadb": "4.1.1",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
     "react": "18.0.0",
