--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "slicemachine": "start-slicemachine"
   },
   "dependencies": {
-    "@prismicio/client": "^6.4.3",
+    "@prismicio/client": "5.1.1",
     "@prismicio/helpers": "^2.3.0",
     "@prismicio/react": "^2.3.0",
     "@prismicio/slice-simulator-react": "^0.2.2",
