--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "faunadb": "4.1.1",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
+    "prismic-dom": "^2.2.7",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-icons": "^4.3.1",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.23",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.43",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
